<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_8sdp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rate_suffix"
            style="@style/TextViewStyle1" />

        <com.willy.ratingbar.ScaleRatingBar
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/rb_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srb_numStars="5"
            app:srb_minimumStars="1"
            app:srb_rating="0"
            app:srb_starWidth="@dimen/_15sdp"
            app:srb_starHeight="@dimen/_15sdp"
            app:srb_starPadding="4dp"
            app:srb_stepSize="0.5"
            app:srb_isIndicator="false"
            app:srb_clickable="true"
            app:srb_scrollable="true"
            app:srb_clearRatingEnabled="true"
            app:srb_drawableEmpty="@drawable/star_empty"
            app:srb_drawableFilled="@drawable/star_filled"/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_review"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/review">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:lines="4"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_submit_review"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/submit_review"
        android:textColor="@color/primaryTextColor" />
</LinearLayout>