<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.addorderfragment.AddOrderFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:hint="@string/phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/sp_shoppers"
                android:background="@drawable/dropdown_bg"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_8sdp" />

            <LinearLayout
                android:id="@+id/Reports_Fragment_Ll_From"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewStyle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/time_to_be_delivered"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/Reports_Fragment_Tv_From"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|start"
                    android:background="@drawable/shape_et_bg"
                    android:padding="@dimen/_4sdp"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/_10ssp"
                    app:drawableEndCompat="@drawable/ic_date_range" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_typed_location"
                    style="@style/TextViewStyle1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/location"
                    android:textSize="@dimen/_12ssp" />

                <Button
                    android:id="@+id/bt_add_location"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_location"
                    app:icon="@drawable/ic_add" />
            </LinearLayout>

            <Spinner
                android:id="@+id/sp_items"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/dropdown_bg"
                tools:listitem="@layout/dropdown_layout"
                android:entries="@array/shopItems"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/bt_submit"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/submit_order"
                android:textColor="@color/primaryTextColor"
                app:icon="@drawable/ic_add"
                app:iconTint="@color/primaryTextColor" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>