<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_4sdp"
    app:cardCornerRadius="@dimen/_8sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/TextViewStyle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_suffix"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tv_nameval"
                style="@style/TextViewStyle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/l_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_4sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                style="@style/TextViewStyle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_suffix"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tv_phoneval"
                style="@style/TextViewStyle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/l_shopper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_4sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/l_phone">

            <TextView
                style="@style/TextViewStyle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shopper"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tv_shopperval"
                style="@style/TextViewStyle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/l_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_4sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/l_shopper">

            <TextView
                style="@style/TextViewStyle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_time"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tv_timeval"
                style="@style/TextViewStyle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/l_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:layout_marginTop="@dimen/_4sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/l_delivery">

            <TextView
                style="@style/TextViewStyle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_suffix"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tv_locationval"
                style="@style/TextViewStyle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <com.ahmedrafat.ordersapp.utils.ItemsListView
            android:id="@+id/lv_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/l_location"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>